--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - .:/opt/app
+    restart: always
     links:
       - web
     ports:
@@ -17,14 +18,24 @@ services:
     image: web:latest
     volumes:
       - .:/opt/app
+    restart: always
     links:
       - db
   db:
     image: "mysql:5.7"
     volumes:
       - ./db:/var/lib/mysql
+      - ./application/config/db:/docker-entrypoint-initdb.d
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: test
+      MYSQL_ROOT_PASSWORD: asdksd787w73rbnwebh348sdyfh8734rbhfs87bhsd89w34b
+      MYSQL_DATABASE: hugex
+      MYSQL_USER: demo
+      MYSQL_PASSWORD: aSdF123
     ports:
       - "3306:3306"
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
